recursion.logo.polygonfractal.PolygonFractal.scala.error
Compilation error:
PolygonFractal:2: error: reassignment to val
  if (levels=1){
            ^